nexus/03-nexus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
    type: service
spec:
  selector:
    app: nexus
    type: pod
  ports:
    - port: 8081
      name: http
    - port: 5000
      name: docker
