nexus/05-nexus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: nexus
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
      - "nexus.domain.tld"
    secretName: "nexus-tls"
  rules:
  - host: "nexus.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "nexus"
            port:
              number: 8081
